# databoi-public

./: databoi.py  pyproject.toml  readme.md
.github/workflows/: python-package.yml  python-publish.yml
attribution/: analyze_paths.py  estimate_attribution.py  time_to_conversion.py
clustering/: cluster_users.py  identify_high_value_and_similar.py  identify_similar_persons.py  most_similar_high_value_person.py
experimentation/: bayesian_significance.py  chi_squared_pairwise.py  confidence_intervals.py  generate_bayesian_priors.py  run_z_test.py
modeling/: causal_decision_tree.py  gradient_boosted_tree.py  linear_regression.py
planning/: days_to_significance.py  mde_fixed.py  mde_time_table.py  sample_rate_mismatch.py
