[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databoi"                       # final PyPI name
version = "0.1.0"                      # bump per release
description = "Modular analytics for CRO, experiments, attribution, cohorts, and modeling"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["ab-testing","bayesian","cohorts","attribution","segmentation","CRO"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "plotly>=5.0",
  "lifelines>=0.27",
  "xgboost>=1.7"
]

[project.urls]
Homepage = "https://github.com/pbarden/databoi-public"
Repository = "https://github.com/pbarden/databoi-public"
Issues = "https://github.com/pbarden/databoi-public/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["databoi*"]
